--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>App Registration | Innovation Co-Lab</title>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
+  <meta name="description" content="App registration page for Duke Innovation Co-Lab. The Innovation Co-Lab is a Creativity Incubator connecting student pioneers with the human and technological resources necessary to jumpstart their success.">
+  <meta name="keywords" content="colab,app,api,duke,innovationcolab">
+
+  <link rel="icon" href="favicon.png">
+  <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic'>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/paper/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
